@@ -12,9 +12,9 @@ For now, though, we are only using pyrrd.external.
 try:
     # XXX we're not going to let this pass for now, since we don't
     # support the python bindings yet
-    raise
-    import rrdtool 
-    import bindings as rrdbackend
+    raise NotImplementedError
+    #import rrdtool 
+    #import bindings as rrdbackend
 except:
     import external as rrdbackend
 
